--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "prismjs": "1.29.0",
     "roboto-fontface": "0.10.0",
     "shepherd.js": "13.0.1",
+    "sweetalert2": "^11.14.1",
     "swiper": "11.1.9",
     "ufo": "1.5.4",
     "unplugin-vue-define-options": "1.4.9",
